--- a/src/app/modules/profiledetails/profiledetails.component.html
+++ b/src/app/modules/profiledetails/profiledetails.component.html
@@ -1337,7 +1337,7 @@
                   type="submit"
                   data-bs-dismiss="modal"
                   aria-label="Close"
-                  [disabled]="!educationForm.invalid"
+                  [disabled]="educationForm.invalid"
                   (click)="PercentageSubmit();FetchDetails()"
                 >
                   Save
