--- a/src/app/modules/job-post/job-post.component.html
+++ b/src/app/modules/job-post/job-post.component.html
@@ -5,7 +5,7 @@
     <input type="hidden" id="dateCreated" name="dateCreated" [(ngModel)]="jobservice.jobData.dateCreated">
     <input type="hidden" id="postDate" name="postDate" [(ngModel)]="jobservice.jobData.postDate">
     <input type="hidden" id="createdBy" name="createdBy" [(ngModel)]="jobservice.jobData.createdBy">
-    <input type="hidden" id="userId" name="userId" [(ngModel)]="jobservice.jobData.userId">
+    <input type="hidden" id="userId" name="userId" [(ngModel)]="jobservice.jobData.usersId">
     <input type="hidden" id="jobUniqueId" name="jobUniqueId" [(ngModel)]="jobservice.jobData.jobUniqueId">
     <input type="hidden" id="userEmail" name="userEmail" [(ngModel)]="jobservice.jobData.userEmail">
     <input type="hidden" [value]="selectedCardTitles.join(', ')" ngModel name="service" #service="ngModel"
