--- a/src/app/modules/apply-now/apply-now.component.html
+++ b/src/app/modules/apply-now/apply-now.component.html
@@ -466,9 +466,8 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
         >Terms of Use.</span
       > </span
     ><br />
-    <button class="btn aplbtn" [disabled]="applyForm.invalid" type="submit">Apply Now</button>
+    <button class="btn aplbtn" [disabled]="applyForm.invalid" type="submit" (click)="notifyNow();">Apply Now</button>
   </form>
-  <!-- (click)="notifyNow();" -->
   <button class="sabtn" data-bs-toggle="modal" data-bs-target="#savejob">
     Save as Draft
   </button>
@@ -676,10 +675,10 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
 
 
 <!-- Notification Form -->
-<!-- <form #notificationForm="ngForm" (ngSubmit)="onSubmitNotification(notificationForm)">
+<form #notificationForm="ngForm" (ngSubmit)="onSubmitNotification(notificationForm)">
   <input type="hidden" id="id" name="id" [(ngModel)]="notificationsService.notificationData.id">
   <input type="hidden" id="userId" name="userId" [(ngModel)]="notificationsService.notificationData.userId">
   <input type="hidden" id="notification" name="notification" [(ngModel)]="notificationsService.notificationData.notification">
   <input type="hidden" id="notificationDate" name="notificationDate" [(ngModel)]="notificationsService.notificationData.notificationDate">
   <button type="submit"  class="d-none"  #notificationButton>Save</button>
- </form> -->
+ </form>
