--- a/src/app/modules/setup-profile/setup-profile.component.html
+++ b/src/app/modules/setup-profile/setup-profile.component.html
@@ -486,7 +486,7 @@
       <div class="card kkpwbx">
         <div class="card-body">
           <div class="container kkpwdiv">
-            <p class="kkpwtg1">Change Password<span class="kkpwtg2"><br><br>Choose a unique password with at least 8
+            <p class="kkpwtg1"  routerLink="/forget-password">Change Password<span class="kkpwtg2"><br><br>Choose a unique password with at least 8
                 characters long </span></p><img style="    width: 30px;
                 height: 36px;" src="../assets/writeic.png">
           </div>
