--- a/src/app/modules/progress-jobs/progress-jobs.component.html
+++ b/src/app/modules/progress-jobs/progress-jobs.component.html
@@ -81,18 +81,18 @@
         </div>
         <div style="margin-top: 26px;">
           <form #updateForm="ngForm" (ngSubmit)="onSubmitStatus(updateForm)">
-            <input type="text" id="id" name="id" [(ngModel)]="selectedhire.id">
-            <input type="text" id="status" name="status" [(ngModel)]="selectedhire.status">
-            <input type="text" id="postBy" name="postBy" [(ngModel)]="selectedhire.postBy">
-            <input type="text" id="jobId" name="jobId" [(ngModel)]="selectedhire.jobId">
-            <input type="text" id="jobUniqueId" name="jobUniqueId" [(ngModel)]="selectedhire.jobUniqueId">
-            <button type="submit" class="">Accept Offer</button>
+            <input type="hidden" id="id" name="id" [(ngModel)]="selectedhire.id">
+            <input type="hidden" id="status" name="status" [(ngModel)]="selectedhire.status">
+            <input type="hidden" id="postBy" name="postBy" [(ngModel)]="selectedhire.postBy">
+            <input type="hidden" id="jobId" name="jobId" [(ngModel)]="selectedhire.jobId">
+            <input type="hidden" id="jobUniqueId" name="jobUniqueId" [(ngModel)]="selectedhire.jobUniqueId">
+            <button type="submit" class="d-none">Accept Offer</button>
           </form>
-          <button  (click)="sendNotification();sendNotifications();"  class="btn rejectconfirm1">Accept Offer</button>
+          <button  (click)="sendNotification();sendNotifications();submitBothForms();"   data-bs-dismiss="modal" aria-label="Close" class="btn rejectconfirm1">Accept Offer</button>
           <form #jobUpdateForm="ngForm" (ngSubmit)="onSubmitJobStatus(jobUpdateForm)">
-            <input type="text" id="id" name="id" [(ngModel)]="selectedhire.jobId">
-            <input type="text" id="status" name="status" [(ngModel)]="jobPosts[0].status">
-            <button type="submit" class="">Accept Offer</button>
+            <input type="hidden" id="id" name="id" [(ngModel)]="selectedhire.jobId">
+            <input type="hidden" id="status" name="status" [(ngModel)]="jobPosts[0].status">
+            <button type="submit" class="d-none">Accept Offer</button>
           </form>    
         </div>
       </div>
